bar-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  annotations:
    foo: "I am happy"
    egress-ports-tcp: "6443"
  labels:
    run: bar
  name: bar
  namespace: default
spec:
  terminationGracePeriodSeconds: 0
  containers:
  - name: bar
    image: nginx
    command: ["bash", "-c"]
    args: 
      - |
        # DO NOT CHANGE ANYTHING HERE
        sleep 10
        while true
          do
            echo -n I am
            # wait for it...
            if ! curl --fail --silent --show-error -k https://10.0.4.100:6443/version >/dev/null; then
              exit 1
            fi
            echo " happy"
            sleep 1
        done
