foo-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  annotations:
    foo: "I am happy"
  labels:
    run: foo
  name: foo
  namespace: default
spec:
  terminationGracePeriodSeconds: 0
  containers:
  - name: foo
    image: nginx
    command: ["bash", "-c"]
    args: 
      - |
        # DO NOT CHANGE ANYTHING HERE
        sleep 10
        while true
          do
            echo -n I am
            # wait for it...
            if ! curl --fail --silent --show-error http://example.com >/dev/null; then
              exit 1
            fi
            echo " happy"
            sleep 1
        done
